# functionQ

./: CMakeLists.txt  README.md  README_zh.md  functionQ.cpp  functionQ.h  main.cpp  scrcpy-server
scrcpy/: adbprocess.cpp  adbprocess.h  device.cpp  device.h  server.cpp  server.h
scrcpy/controller/: action.cpp  action.h  bufferutil.cpp  bufferutil.h  controller.cpp  controller.h  controlmsg.cpp  controlmsg.h  input.h  keycodes.h  qscrcpyevent.h
scrcpy/decoder/: adbprocess.cpp  adbprocess.h  avframeconvert.cpp  avframeconvert.h  compat.h  decoder.cpp  decoder.h  stream.cpp  stream.h  tcpserver.cpp  tcpserver.h  videobuffer.cpp  videobuffer.h  videosocket.cpp  videosocket.h
thrid_party/ffmpeg_new/include/libavutil/: ffversion.h
thrid_party/ffmpeg_new/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
